# aurora-research-crew

./: .gitignore  README.md  render.yaml
.agent/SKILLS/: frontend-design-best-practices.md
backend/: .env.example  pyproject.toml  requirements.txt  test_full_crew.py  test_research_agent.py
backend/app/: config.py  crew.py  events.py  main.py  schemas.py  supabase_client.py
backend/app/agents/: __init__.py  editor_agent.py  fact_checker_agent.py  llm_providers.py  research_agent.py  writer_agent.py
backend/app/routers/: report.py
backend/app/tools/: __init__.py  search_tool.py
backend/scratch/: test_auth.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  supabase.ts  types.ts
frontend/src/components/: AgentNode.tsx  AgentPipeline.tsx  AuroraBackground.tsx  AuthScreen.tsx  GlassCard.tsx  History.tsx  Profile.tsx  ReportViewer.tsx  TopicForm.tsx
frontend/src/hooks/: useReportStream.ts
frontend/src/styles/: globals.css  tokens.css
