[project]
name = "aurora-research-crew"
version = "1.0.0"
description = "An elegant real-time multi-agent research & report writer pipeline"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "crewai==0.36.0",
    "python-dotenv==1.0.1",
    "slowapi==0.1.9",
    "httpx==0.27.0",
    "setuptools<70"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
